--- a/RegistrationFormAlerts.html
+++ b/RegistrationFormAlerts.html
@@ -13,7 +13,7 @@
 
 <style >
 body{
-    background-image:url("images/back.jpg");
+    background-image:url("back.jpg");
   background-size: fill ;
 }
 #theTitle{
